--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_TIMER = 30
-NEXT_PUBLIC_MOVMENT=25
+NEXT_PUBLIC_MOVMENT=26
+NEXT_PUBLIC_AUTHOR = "Alirlikh"
+NEXT_PUBLIC_AUTHOR_LINK = "https://alireza-jalili.ir"
